2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Don't bother w/ <postgresql/...> headers.

	That's a Debian-specific weirdness, apparently.

	* libpq.c: #include <libpq-fe.h> and <libpq/libpq-fs.h>
	unconditionally.

2014-01-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘C_ULONG’ for conversion to ‘size_t’.

	* libpq.c (pg_mblen): ...here, for ‘cstart’.

2014-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘VALIDATE_NNINT_COPY’ more.

	* libpq.c (pg_lo_seek): ...here.

2014-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Decruft: Don't #include <guile/gh.h> directly.

	That's done by snuggle/humdrum.h, now.

	* gi.h: ...here.

2014-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Decruft: Use GI_LEVEL_1_8 directly.

	* gi.h (GI_LEVEL_NOT_YET_1_8): Delete #define;
	throughout, use ‘!GI_LEVEL_1_8’ and ‘GI_LEVEL_1_8’, instead.

2014-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use "snuggle/modsup.h".

	* gi.h: #include "snuggle/modsup.h".
	(GH_DEFPROC, GH_MODULE_LINK_FUNC) [!HAVE_GUILE_MODSUP_H]:
	(MOD_INIT_LINK_THUNK): Delete #define:s, macros.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use "snuggle/defsmob.h".

	* gi.h: #include "snuggle/defsmob.h".
	(DEFSMOB, GCMALLOC, GCFREE, GCRV): Delete macros.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Work w/ "integer" instead of "exact".

	* gi.h (EXACTP): Delete #define/macro.
	(ASSERT_EXACT): Delete macro.
	(ASSERT_INTEGER): New macro.
	(VALIDATE_NNINT_MORE_COPY) [!GI_LEVEL_NOT_YET_1_8]: New macro.
	(VALIDATE_NNINT_COPY, VALIDATE_NNINT_RANGE_COPY)
	[GI_LEVEL_NOT_YET_1_8]: Rename from
	‘ASSERT_EXACT_NON_NEGATIVE_COPY’ and
	‘VALIDATE_EXACT_0_UP_TO_N_COPY’, respectively.
	(VALIDATE_NNINT_COPY, VALIDATE_NNINT_RANGE_COPY)
	[GI_LEVEL_NOT_YET_1_8]: Likewise and also rewrite.
	(pg_lo_seek, pg_mblen): Use ‘ASSERT_INTEGER’.
	(pg_lo_read, VALIDATE_FIELD_NUMBER_COPY, pg_getvalue)
	(pg_getlength, pg_getisnull): Update.
