@@ -1,3 +1,10 @@
+2014-01-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build int] Add abstraction: bx
+
+	* Makefile.am (bx): New var.
+	(include, install-data-hook, uninstall-hook): Use $(bx).
+
 2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[pq int] Don't bother w/ <postgresql/...> headers.
